--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,6 @@
       <header id="header">
         <a href="/" class="image avatar"><img src="images/ideation-networks-logo-text.png" alt="" /></a>
         <h1><strong>Ideation Networks</strong><br />
-        Web development<br />
-        Drupal <br />
-        Going serverless in 2016</h1>
+        Technology<br />
+        for Humans.</h1>
       </header>
